--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,3 +17,5 @@ RoxygenNote: 7.3.1
 RdMacros: Rdpack
 Depends: 
     R (>= 2.10)
+URL: https://github.com/FlukeAndFeather/marinecs100b
+BugReports: https://github.com/FlukeAndFeather/marinecs100b/issues
