Fix error in kefj_* data; create plot_kefj()

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,4 +24,5 @@ BugReports: https://github.com/FlukeAndFeather/marinecs100b/issues
 Suggests: 
     lubridate,
     readr,
-    sbtools
+    sbtools,
+    stringr
