--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(plot_hothand_simulation)
 export(plot_hothand_trends)
 export(plot_ild)
+export(plot_kefj)
 export(plot_montyhall)
 import(ggplot2)
 importFrom(Rdpack,reprompt)
