--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ URL: https://github.com/FlukeAndFeather/marinecs100b,
     https://flukeandfeather.github.io/marinecs100b/
 BugReports: https://github.com/FlukeAndFeather/marinecs100b/issues
 Depends: 
-    R (>= 2.10)
+    R (>= 3.5)
 Imports: 
     dplyr,
     ggplot2,
@@ -23,7 +23,8 @@ Suggests:
     lubridate,
     readr,
     sbtools,
-    stringr
+    stringr,
+    tidyr
 RdMacros: 
     Rdpack
 Encoding: UTF-8
