--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,17 +14,12 @@ BugReports: https://github.com/FlukeAndFeather/marinecs100b/issues
 Depends: 
     R (>= 3.5)
 Imports: 
-    dplyr,
-    ggplot2,
+    palmerpenguins,
     Rdpack,
-    scales,
+    tidyverse,
     usethis
 Suggests: 
-    lubridate,
-    readr,
-    sbtools,
-    stringr,
-    tidyr
+    sbtools
 RdMacros: 
     Rdpack
 Encoding: UTF-8
